# non-local-means

./: CMakeLists.txt  README.md  main.cpp
include/: non_local_means.hpp
non-local-means/: CMakeLists.txt
non-local-means/include/: non_local_means.hpp
non-local-means/src/: non_local_means.cpp  non_local_means.cu  non_local_means_halide_generator.cpp
src/: main.cpp  non_local_means.cpp  non_local_means.cu
